尝试加入图片

--- a/书籍笔记/后台开发-核心技术与应用实践.md
+++ b/书籍笔记/后台开发-核心技术与应用实践.md
@@ -373,3 +373,9 @@ ps(process status)命令列出当前进程的快照
 4. 数据链路层：负责网络层的IP数据报组成帧。
 5. 物理层：透明的传输比特流。
 * 四层网络模型 TCP/IP分层模型
+1. 网络接口层：包括用于协作IP数据在已有网络介质上传输的协议
+2. 网间层：对应OSI七层中的网络层，包含IP协议，RIP协议，负责数据的包装、寻址和路由。还包含ICMP（Internet Control Message Protocol，网间控制报文协议）来提供网络诊断信息。
+3. 传输层：对应OSI七层中的传输层，提供端到端的通信服务，包含TCP以及UDP。
+4. 应用层，对应OSI七层的应用层和表示层
+* TCP头部
+![TCP头部](/assets/TCP头部.jpg)
