更新全书笔记

--- a/书籍笔记/后台开发-核心技术与应用实践.md
+++ b/书籍笔记/后台开发-核心技术与应用实践.md
@@ -52,6 +52,18 @@
 ](#31tcp协议)
     - [ 3.11TCP协议
 ](#311tcp协议)
+  - [ 3.2网络IO模型
+](#32网络io模型)
+    - [ 3.21网络IO模型
+](#321网络io模型)
+    - [ 3.22select函数
+](#322select函数)
+    - [ 3.23poll函数
+](#323poll函数)
+    - [ 3.24epoll函数
+](#324epoll函数)
+    - [ 3.25select/poll/epoll的区别
+](#325selectpollepoll的区别)
 
 <!-- /code_chunk_output -->
 
@@ -379,3 +391,136 @@ ps(process status)命令列出当前进程的快照
 4. 应用层，对应OSI七层的应用层和表示层
 * TCP头部
 ![TCP头部](/assets/TCP头部.jpg)
+TCP头部每个字段为管理TCP连接和控制数据流起了重要作用。
+1. 端口号：首先为两个16位端口号，告知主机来源和目的的端口。客户端通常使用系统自动选择的临时端口号，服务器使用知名服务端口。
+2. 32位序号：每一个包中都包含序列号，在接收端则通过确认号用来通知发送端数据成功接收。当一个主机开启一个TCP会话时，它的序列号被系统初始化为某个随机值ISN。后续的TCP报文段中序号加上该报文段所携带数据的第一个字节在整个字节流中的偏移。例如，某个TCP报文段传送的数据是字节流中的第1025～2048字节，那么该报文段的序号值就是ISN+1025。
+3. 32位确认号：用作对另一方发来的TCP报文段的响应。其值是收到TCP报文段的序号值+1。
+4. 4位的头部长度：标识头部有多少个32bit。
+5. 6位标志位
+  URG标志，标识紧急指针是否有效
+  ACK标志，标识确认号是否有效，携带此标志的称为确认报文段
+  PSH标志，提示接收端应立即取走数据，以腾出空间
+  RST标志，要求重新建立连接，称为复位报文段
+  SYN标志，请求建立一个连接，称为同步报文段
+  FIN标志，通知对方本端要关闭连接，称为结束报文段
+6. 16位窗口大小：用于TCP流量控制，告知对方接收缓冲区还能容纳的字节数，这样对方就可以控制发送速度。
+7. 16位校验和：由发送端填充，接收端对TCP报文段执行CRC算法，已检验报文段是否损坏。TCP实现可靠传输的重要保障
+8. 长度为16位，2个字节，指向后面是优先数据的字节，在URG标志设置了时才有效。如果URG标志没有被设置，紧急域作为填充。加快处理标示为紧急的数据段。
+* TCP状态流转
+网络上的传输是没有连接的，TCP所谓的连接指的是双方维护一个通信状态。
+1. 建立连接（三次握手）
+![sanciwoshou](/assets/sanciwoshou.png)
+连接建立简单称为三次握手，如图所示，完成此步骤，服务器和客户端进入ESTABLISHED状态。
+2. 结束连接（四次挥手）
+![sicihuishou](/assets/sicihuishou.png)
+TCP所示全双工的（可以同时发送和接收），因此在关闭时，需要关闭传和收两个方向的连接。 客户机给服务器发送FIN报文，服务器返回一个ACK报文，然后发送一个FIN报文，客户机恢复ACK报文后，连接结束。
+**为什么建立三次，结束要四次**
+因为TCP是全双工通信的，服务器收到FIN后，可能还有想要发送的数据，所以先发送ACK，告知客户请求已经被首刀，处理完后，再主动发送FIN，进入LAST_ACK阶段。主动发即使发送ACK进行确认，被动方释放连接。
+* TCP超时重传
+假设几种情况：1.数据顺利到对端，对端顺利响应ACK。2.数据报中途丢失。3.数据包顺利到达，但ACK报文丢失。4.数据包到达，但对端未响应ACK，或被对端丢弃。
+发生异常情况,TCP会超时重传。TCP等待（RTO retransmission TimeOut，重传超时时间），若没收到ACK，则会重传这一报文段。
+* TCP滑动窗口
+![tcpswwindows](/assets/tcpswwindows.png)
+![tcpswslide](/assets/tcpswslide.png)
+TCP的窗口大小为16bit的字段，TCP选项字段里还有窗口扩大因子。TCP回话双方维护一个发送和接收窗口，接收窗口取决于系统等因素，发送取决于对端的接收窗口。
+* TCP拥塞控制
+计算机网络中带宽等资源时有限的，如果某一资源的需求超过的提供的部分，那么网络性能会变差，称为拥塞。TCP控制拥塞的由四个核心算法构成：慢开始、拥塞避免、快速重传和快速回复。
+1. 慢开始
+发送方维护一个**拥塞窗口(cwnd)** 拥塞窗口大小动态变化，发送窗口小于等于拥塞窗口。
+基本思路：不要一开始就发送大量的数据，先检测一下网络的拥塞程度，也就是有小到大逐渐增加拥塞窗口大小。
+为了避免cwnd增长过大，需设置慢开始门限ssthresh变量，当cwnd超过阈值，使用下述的拥塞避免算法
+2. 拥塞避免
+拥塞控制算法让拥塞窗口缓慢增长，每经过一个RTT将发送方cwnd+1.
+具体过程如下：
+TCP连接初始化，拥塞窗口设置为1
+执行慢开始算法，cwnd指数增大，直到阈值，执行拥塞避免算法，cwnd线性增长
+网络发生拥塞，ssthresh更新为之前的一半，cwnd重设为1
+3. 快速重传
+快重传要求接收方在收到一个失序的报文段后，立即发出重复确认，快重传算法规定，发送方只要一连收到3个重复确认，就当立即重传对方尚未收到的报文段，而不等待重传计时器。
+4. 快恢复
+当发送方连续收到三个重复确认时，执行乘法减小，将ssthresh门限减半，但不执行慢开始算法。
+考虑到网络如果拥塞，将不会收到好几个重复的确认，所以发送认为网络没有拥塞，将cwnd设为ssthresh，并执行拥塞避免算法。
+## 3.2网络IO模型
+### 3.21网络IO模型
+为了解决网络IO中的问题，有四种网络IO模型：阻塞IO模型、非阻塞IO模型、多路IO复用模型、异步IO模型
+* 阻塞IO模型
+![阻塞IO](/assets/阻塞IO.png)
+IO操作需要等到彻底完成后才回到用户空间，这使得在此期间，线程无法执行任何运算或响应请求。
+简单地改进方案是采用多线程（或多进程），这样任一个连接阻塞都不会影响其他连接。   
+线程和进程严重占据系统资源，降低系统对外界响应的效率。
+线程池：降低创建和销毁线程的频率，并让空闲的线程承担新的任务。
+连接池：维持连接的缓存池，尽量重用已有的连接，降低创建和关闭的频率。
+* 非阻塞IO模型
+![非阻塞IO](/assets/非阻塞IO.png)
+用户进程不断的询问kernel数据是否准备好。非阻塞的明显差别在于在被调用之后可以立即返回。
+* 多路IO复用模型
+![多路IO复用](/assets/多路IO复用.png)
+也称事件驱动IO，它的基本原理是有个函数（如select）会不断地轮询所有负责的socket，当某个socket有数据到达了，就通知用户进程。
+* 异步IO模型
+![异步IO](/assets/异步IO.png)
+用户发起操作后，可以作其他的是，当数据准备完成时，内核给用户进程发送信号，返回已完成的信息
+### 3.22select函数
+`int select(int maxfdp, fd_set *readfds, fd_set *writefds, fd_set *errorfds, struct timeval *timeout)`
+利用select监听描述符，maxfdp是最大描述符+1，timeval为设定的超时时间，返回值为准备好的描述符。
+select返回后，用FD_ISSET测试该描述符是否发生事件，没发生时间的会被清空，需要重新设置。
+### 3.23poll函数
+和select类似，poll函数也可以用于执行多路IO复用。
+```
+#include<poll.h>
+int poll(struct pollfd *fds, unsigned int nfds, int timeout);
+```
+ pollfd结构体定义如下：
+```
+struct pollfd {
+  int fd;//文件描述符
+  short events;//等待的事件
+  short revents;//实际发生了的事件
+}
+```
+每个pollfd指定一个被监视的文件描述符，在events中请求，可能在revents中返回
+### 3.24epoll函数
+epoll是Linux2.6内核提出的，是select和poll的增强版本。在头文件sys/epoll.h中
+* epoll接口
+1. int epoll_create(int size);
+创建一个epoll句柄，size用来告诉内核要监听的数目。创建好后，它会占用一个fd值，所以在使用之后，必须要调用close关闭，否则可能使fd被耗尽。
+2. int epoll_ctl(int epfd, int op, int fd, struct epoll_event * event);
+epoll的事件注册函数，它不同于select()是在监听事件时告诉内核要监听什么类型的事件，而是在这里先注册要监听的事件类型。
+第一个参数是create的返回值
+第二个是动作，用三个宏表示：
+EPOLL_CTL_ADD 注册新的fd到epfd
+EPOLL_CTL_MOD 修改已经注册的fd的监听事件
+EPOLL_CTL_DEL 从epfd删除一个fd
+第三个参数是需要监听的fd
+第四个参数是告诉内核需要监听的事情，结构体定义如下：
+```
+struct epoll_event {
+  __uint32_t events; //epoll events
+  epoll_data_t data; //user data variable
+}
+```
+events可以是一下几个宏的集合：
+EPOLLIN 表示对应描述符可读
+EPOLLOUT 对应描述符可写
+EPOLLPRI 对应的描述符有紧急数据可读
+EPOLLERR 对应描述符发生错误
+EPOLLHUP 对应描述符被挂断
+EPOLLET 设置为边缘触发模式
+EPOLLONESHOT 只监听一次时间
+3.  int epoll_wait(int epfd, struct epoll_event * events, int maxevents, int timeout);
+收集在epoll监控的事件中已经发送的事件。参数events是分配好的epoll_event结构体数组，epoll将会把发生的事件赋值到events数组中（events不可以是空指针，内核只负责把数据复制到这个events数组中，不会去帮助我们在用户态中分配内存）。maxevents告之内核这个events有多大，这个 maxevents的值不能大于创建epoll_create()时的size，参数timeout是超时时间（毫秒，0会立即返回，-1将不确定，也有说法说是永久阻塞）。如果函数调用成功，返回对应I/O上已准备好的文件描述符数目，如返回0表示已超时。
+### 3.25select/poll/epoll的区别
+* 对于网络编程来说，一般认为poll比select高级
+1. poll不要开发者在计算最大描述符+1的操作
+2. poll应对大数目文件描述符时更快，因为select需要检查大量描述符对应的每一个比特位
+3. select可监控的文件描述符的数目是固定的，相对较少（1024或2048）
+4. select返回会使fd_set变化，每次都要重新初始化，但poll将输入输出分开，不需要重新初始化
+5. select超时参数返回时未定义，考虑移植性，每次重新设置
+* select的优点
+1. 可移植性好，某些UNIX不支持poll
+2. 对于超时值提供了更好的精度
+* epoll的优点
+1. 支持一个进程打开大数目的socket描述符
+2. IO效率不随FD数组增加而线性下降
+select和poll当有很大的socket几何时，由于网络延迟，任意时间只有部分socket是活跃的，但他们会扫描全部的几何。epoll只对活跃的socket进行操作，因为epoll是根据每个fd上面的callback函数实现的，只有活跃的socket才会调用。
+3. 使用mmap加速内核和用户控件的消息传递
+epoll通过内核与用户空间mmap处于同一块内存实现
