--- a/书籍笔记/后台开发-核心技术与应用实践.md
+++ b/书籍笔记/后台开发-核心技术与应用实践.md
@@ -390,7 +390,7 @@ ps(process status)命令列出当前进程的快照
 3. 传输层：对应OSI七层中的传输层，提供端到端的通信服务，包含TCP以及UDP。
 4. 应用层，对应OSI七层的应用层和表示层
 * TCP头部
-![TCP头部](/assets/TCP头部.jpg)
+![TCP头部](../assets/TCP头部.jpg)
 TCP头部每个字段为管理TCP连接和控制数据流起了重要作用。
 1. 端口号：首先为两个16位端口号，告知主机来源和目的的端口。客户端通常使用系统自动选择的临时端口号，服务器使用知名服务端口。
 2. 32位序号：每一个包中都包含序列号，在接收端则通过确认号用来通知发送端数据成功接收。当一个主机开启一个TCP会话时，它的序列号被系统初始化为某个随机值ISN。后续的TCP报文段中序号加上该报文段所携带数据的第一个字节在整个字节流中的偏移。例如，某个TCP报文段传送的数据是字节流中的第1025～2048字节，那么该报文段的序号值就是ISN+1025。
