--- a/实习笔记/实习笔记.md
+++ b/实习笔记/实习笔记.md
@@ -33,12 +33,12 @@
     - [3.海量数据处理](#3%e6%b5%b7%e9%87%8f%e6%95%b0%e6%8d%ae%e5%a4%84%e7%90%86)
     - [4.B树，B+树](#4b%e6%a0%91b%e6%a0%91)
     - [5.AVL和红黑树](#5avl%e5%92%8c%e7%ba%a2%e9%bb%91%e6%a0%91)
-  - [设计模式](#%e8%ae%be%e8%ae%a1%e6%a8%a1%e5%bc%8f)
-    - [1.单例模式](#1%e5%8d%95%e4%be%8b%e6%a8%a1%e5%bc%8f)
-    - [2.工厂模式](#2%e5%b7%a5%e5%8e%82%e6%a8%a1%e5%bc%8f)
-    - [3.观察者模式](#3%e8%a7%82%e5%af%9f%e8%80%85%e6%a8%a1%e5%bc%8f)
-    - [4.装饰器模式](#4%e8%a3%85%e9%a5%b0%e5%99%a8%e6%a8%a1%e5%bc%8f)
-    - [5.OOP设计模式](#5oop%e8%ae%be%e8%ae%a1%e6%a8%a1%e5%bc%8f)
+  - [go语言部分](#go%e8%af%ad%e8%a8%80%e9%83%a8%e5%88%86)
+  - [mysql部分](#mysql%e9%83%a8%e5%88%86)
+  - [开发组件(redis、message queue、localcache 等)](#%e5%bc%80%e5%8f%91%e7%bb%84%e4%bb%b6redismessage-queuelocalcache-%e7%ad%89)
+  - [实习项目总结](#%e5%ae%9e%e4%b9%a0%e9%a1%b9%e7%9b%ae%e6%80%bb%e7%bb%93)
+    - [项目结构](#%e9%a1%b9%e7%9b%ae%e7%bb%93%e6%9e%84)
+    - [核心(分类课程及课程分类)](#%e6%a0%b8%e5%bf%83%e5%88%86%e7%b1%bb%e8%af%be%e7%a8%8b%e5%8f%8a%e8%af%be%e7%a8%8b%e5%88%86%e7%b1%bb)
 
 ## 操作系统
 
@@ -87,7 +87,7 @@
     * 进程切换代价大，线程切换代价小
     * 多个线程共享进程的资源
 
-    所以，进程是资源分配的最小单位，而进程是CPU调度的最小单位。多线程之间共享同一个进程的地址空间，所以通信简单，但是同步复杂，线程创建、销毁和切换简单，速度快，占用内存少，但线程间会互相影响，一个意外终止，会导致整个进程终止，可靠性更弱。   
+    所以，进程是资源分配的最小单位，而线程是CPU调度的最小单位。多线程之间共享同一个进程的地址空间，所以通信简单，但是同步复杂，线程创建、销毁和切换简单，速度快，占用内存少，但线程间会互相影响，一个意外终止，会导致整个进程终止，可靠性更弱。   
     多进程间各自独立，不会互相影响，程序可靠性强，但是创建、销毁和切换复杂，速度更慢，占用内存更多，通信更加复杂，但是同步简单。
 
     * 进程切换通常由两部分  
@@ -97,7 +97,7 @@
         第一步线程是不需要做的
 
 * 死锁  
-    产生死锁的的哥必要条件
+    产生死锁的四个必要条件
     * 互斥：一个资源每次只能一个进程使用
     * 占有且等待：一个进程因请求资源而阻塞，对已获得的资源不进行释放
     * 不可强行占有：进程不可强行剥夺已被获取资源
@@ -631,6 +631,7 @@ pid_t getsid(pid_t pid);
     因为在多级时间轮的操作中，虽然大部分时间为O(1)的复杂度，但是当进位发生时，有可能坏至O(N)的定时器迁移时间，这种不稳定极大的影响了定时器的精度。  
     而红黑树方式采用时间触发方式，能够实现较为精确的定时  
 [时间轮介绍](http://oneyearago.me/2019/10/24/linux_timer/)  
+[时间轮原理](http://www.langdebuqing.com/algorithm%20notebook/%E5%A4%9A%E7%BA%A7%E6%97%B6%E9%97%B4%E8%BD%AE%E5%AE%9A%E6%97%B6%E5%99%A8.html)
 [选用红黑树的原因](https://www.cnblogs.com/arnoldlu/p/7078266.html)
 ## 网络
 
@@ -756,7 +757,7 @@ tcpdump可以截获网络数据包，并对其进行分析。
         不调用connect时，情况为建立连接，发送报文，断开连接，建立连接，再发送。。。调用之后变为建立连接，发送，发送。。。，断开，提高了效率，此外，UDP可以调用多次connect。
     * close
         ```c
-        int lcose(int sockfd);
+        int close(int sockfd);
         ```
         将套接字引用-1，如果为0，关闭套接字，>0，则不会。
     * shutdown
@@ -796,6 +797,15 @@ tcpdump可以截获网络数据包，并对其进行分析。
         ssize_t writev(int filedes, const struct iovec *iov, int iovcnt);
         ```
         利用iovec进行分块读写，iovec里用base和len来表示每块的范围
+* 典型调用顺序
+    TCP服务端一般调用顺序:socket--->bind--->listen--->accept--->process user input;
+
+    TCP客户端调用顺序：socket --->connect ---->process user input;
+
+    UDP服务端一般调用顺序:socket--->bind--->recvfrom
+
+    UDP客户端调用顺序：socket --->sendto;
+
 * 网络模型
     * Reactor模式
         ![Reactor](./asserts/Reactor.png)
@@ -886,7 +896,7 @@ tcpdump可以截获网络数据包，并对其进行分析。
     ```
     进行事件等待，events返回等待成功的时间，maxevents告诉events的个数，timeout等待时间精度为ms。
 
-    **LT和ET**：LT只有可行，就会重复提醒，ET只有当状态变为可行时，会提醒。  
+    **LT和ET**：LT只要可行，就会重复提醒，ET只有当状态变为可行时，会提醒。  
     ET只支持非阻塞IO  
     因为二者的特点，LT可以不取完所有数据，但是ET必须操作到不能再次操作(errno为EAGAIN)，也因此，ET的触发次数更少
 
@@ -1032,12 +1042,13 @@ cat[选项][文件]
 
 
 ## 编程语言
+
+### 基础
 * static作用是什么？在C和C++中有何区别？  
     * static可以修饰局部变量（静态局部变量）、全局变量（静态全局变量）和函数，被修饰的变量存储位置在静态区。对于静态局部变量，相对于一般局部变量其生命周期长，直到程序运行结束而非函数调用结束，且只在第一次被调用时定义；对于静态全局变量，相对于全局变量其可见范围被缩小，只能在本文件中可见；修饰函数时作用和修饰全局变量相同，都是为了限定访问域。
     * 在c++中，static还可以修饰类的成员(成员函数或者成员变量)，成员变量和函数都不属于任何一个对象，所有实例共有。利用这种特性，可以在所有类实例中进行通信
 
 * 指针和引用区别？  
-    * 引用只是别名，不占用具体存储空间，只有声明没有定义；指针时具体变量，需要占用存储空间。
     * 引用只是别名，不占用具体存储空间，只有声明没有定义；指针时具体变量，需要占用存储空间。
     * 引用一旦初始化之后就不可以再改变（变量可以被引用为多次，但引用只能作为一个变量引用）；指针变量可以重新指向别的变量。
     * 不存在指向空值的引用，必须有具体实体；但是存在指向空值的指针。
@@ -1284,6 +1295,73 @@ cat[选项][文件]
 
     但是结果只有不在是确定的，在只能是概率上在
 
+### modern c++
+
+* 结构化绑定(c++17)
+
+```cpp
+multimap<string, int>::iterator
+  lower, upper;
+std::tie(lower, upper) =
+  mmp.equal_range("four");
+auto [lower, upper] =
+  mmp.equal_range("four");
+```
+可以直接用 auto，捕获 pair、tuple 等的元素值，还是很方便的，注意vector 这种编译期长度位置的，不可以捕获。
+
+* lambda
+
+    使用 lambda 表达式可以快速的创建一个匿名的函数对象，在一些操作中可以得到更简洁的代码。
+  * 本地变量名标明对其按值捕获（不能在默认捕获符 = 后出现；因其已自动按值捕获所有本地变量）
+  * & 加本地变量名标明对其按引用捕获（不能在默认捕获符 & 后出现；因其已自动按引用捕获所有本地变量）
+  * this 标明按引用捕获外围对象（针对 lambda 表达式定义出现在一个非静态类成员内的情况）；注意默认捕获符 = 和 & 号可以自动捕获 this（并且在 C++20 之前，在 = 后写 this 会导致出错）
+  * *this 标明按值捕获外围对象（针对 lambda 表达式定义出现在一个非静态类成员内的情况；C++17 新增语法）
+
+    go 的闭包和 c++的很不同，go 捕获的都是引用，可以通过显示的拷贝变量来捕获值
+
+* c++函数式编程
+    许多高阶函数在函数式编程中已成为基本的惯用法，在不同语言中都会出现，虽然可能是以不同的名字。我们在此介绍非常常见的三个，map（映射）、reduce（归并）和 filter（过滤）。
+    * Map 在 C++ 中的直接映射是 transform（在 头文件中提供）。它所做的事情也是数学上的映射，把一个范围里的对象转换成相同数量的另外一些对象。这个函数的基本实现非常简单，但这是一种强大的抽象，在很多场合都用得上。
+    ```cpp
+    template< class InputIt, class OutputIt, class UnaryOperation > 
+    constexpr OutputIt transform( InputIt first1, InputIt last1, OutputIt d_first, UnaryOperation unary_op );
+    // 将 [first1, last1)尽心 unary_op 操作，并存取到 d_first 开头的地方
+    ```
+    * Reduce 在 C++ 中的直接映射是 accumulate（在 头文件中提供）。它的功能是在指定的范围里，使用给定的初值和函数对象，从左到右对数值进行归并。在不提供函数对象作为第四个参数时，功能上相当于默认提供了加法函数对象，这时相当于做累加；提供了其他函数对象时，那当然就是使用该函数对象进行归并了。
+    ```cpp
+    template< class InputIt, class T, class BinaryOperation >
+    constexpr T accumulate( InputIt first, InputIt last, T init, BinaryOperation op );
+    // 计算给定值 init 与给定范围 [first, last) 中元素的和。第一版本用 operator+ ，第二版本用二元函数 op 求和元素，均将 std::move 应用到其左侧运算数 (C++20 起)。
+    ```
+
+* 并发
+    * 提供了 mutex 类，主要提供了 lock、trylock 和 unlock 的方法，和 linux 基本一致，还提供了lock_guard的 RAII 方式的加减锁。
+    * condition_variable条件变量，有 wait，notiy 等方法
+* 智能指针
+    * unique_ptr：独占的持有一个资源，析构会释放持有的指针的内存。由于资源是独占的，因此拷贝构造是需要被禁用的，且赋值函数，需要用 swap 成员函数实现。
+    * shared_ptr: 多个共享一个资源，析构时会判断引用计数，如果为 0 则释放资源。
+    * weak_ptr: 使用 shared_ptr会有循环引用的问题，weak_ptr可以通过expired方法观察是否失效，且通过lock 可以提升为 shared_ptr。
+
+    此外，最好使用 make_shared/make_unique 进行申请智能指针
+* 右值和移动
+    * 纯右值 prvalue：没有标识符、不可以取地址的表达式，一般也称之为“临时对象”。最常见的情况有：
+      * 返回非引用类型的表达式，如 x++、x + 1、make_shared(42)
+      * 除字符串字面量之外的字面量，如 42、true
+      
+      右值之前可以绑定在常引用上，现在也可以利用 T&&右值引用捕获，很反常理的是，右值引用本身是一个左值
+    * std::move 的可以看做有名字的右值，记为 xvalue
+    
+    采用右值引用T&&可以延长prvalue 的生命周期，但不能延长xvalue 的。
+* 异常
+    * 异常安全：指当异常发生时，既不会发生资源泄漏，系统也不会处于一个不一致的状态
+    详细内容，查看[异常](https://github.com/czs108/Cpp-Primer-5th-Notes-CN/tree/master/Chapter-18%20Tools%20for%20Large%20Programs)
+    * 在go中，panic 相当于 go 的异常，也会层层上报，直到被 recover或者退出程序。
+* 成员函数说明符
+    override 和 final 是两个 C++11 引入的新说明符。它们不是关键词，仅在出现在函数声明尾部时起作用，不影响我们使用这两个词作变量名等其他用途。
+    * override 显式声明了成员函数是一个虚函数且覆盖了基类中的该函数。如果有 override 声明的函数不是虚函数，或基类中不存在这个虚函数，编译器会报告错误
+    * final 则声明了成员函数是一个虚函数，且该虚函数不可在派生类中被覆盖。如果有一点没有得到满足的话，编译器就会报错。final 还有一个作用是标志某个类或结构不可被派生。同样，这时应将其放在被定义的类或结构名后面。
+* 无锁队列见[无锁队列](https://coolshell.cn/articles/8239.html)
+
 ## 算法和数据结构
 
 ### 1.一致性哈希
@@ -1316,6 +1394,7 @@ cat[选项][文件]
 采用2路归并排序，每个数据需要进行log2N次IO，访问外存的次数较多，效率很低。
 
 如果采用K路选择，则每个只要进行logKN次，IO，可以有效的减少IO次数，但是增加K值，会降低内部排序的效率，因此引入了胜者树、败者树算法
+[多路归并](https://blog.csdn.net/haolexiao/article/details/53488314)
 
 * 胜者树  
     胜者树的定义：
@@ -1423,16 +1502,202 @@ AVL是左右子树平衡因子(高度差绝对值)小于等于1的树。
     但是要知道删除的结构调整次数也是只有常数次
 
 
+## go语言部分
+go语言部分看笔记
+[go 语言实战](../书籍笔记/Go语言实战.md)
+[Go程序设计语言](../书籍笔记/Go程序设计语言.md)
+[Go源码](../书籍笔记/Go源码.md)
+[go 注意事项](../书籍笔记/Go注意事项.md)
+## mysql部分
+[mysql 必知必会](../书籍笔记/MySQL必知必会.md)
+ps ...高性能 mysql 待续
+etcd
+## 开发组件(docker、k8s)
 
-## 设计模式
+## rpc
 
-### 1.单例模式
+### rpc 和 http 的区别，为什么要用 rpc
 
-### 2.工厂模式
+首先说下，http是一个基于TCP/IP通信协议来传递数据的协议，rpc 指的是远程过程调用，分为很多部分，通信协议部分可以采用 http(grpc)，也可以框架自行在 TCP 上进行封装。
 
-### 3.观察者模式
+在来说说为什么要做 rpc，这主要是因为在微服务化之前，服务端代码都是在一台机器上运行的(虽然可能有多个机器跑同样代码做负载均衡)，这时候的调用都是本地调用。后来由于单机代码太大，不好开发及维护，所以采用了微服务的架构，对代码进行拆分，原来本地的调用变成了远程的，也就需要 rpc 这种方式了。
 
-### 4.装饰器模式
+### 如何设计 rpc 框架，thrift 介绍
 
-### 5.OOP设计模式
+1. 通信：要解决通讯的问题，主要是通过在客户端和服务器之间建立TCP连接，远程过程调用的所有交换的数据都在这个连接里传输。连接可以是按需连接，调用结束后就断掉，也可以是长连接，多个远程过程调用共享同一个连接。
+2. 服务间寻址：A服务器上的应用怎么告诉底层的RPC框架，如何连接到B服务器（如主机或IP地址）以及特定的端口，方法的名称名称是什么，这样才能完成调用。
+3. 序列化：传递参数的序列化及反序列化过程
+4. 错误处理：重试、熔断等
 
+下面根据上面几部分，介绍公司用的 thrift相关的内容，下面是 thrift 整体网络栈
+```
+  +-------------------------------------------+
+  | Server                                    |
+  | (single-threaded, event-driven etc)       |
+  +-------------------------------------------+
+  | Processor                                 |
+  | (compiler generated)                      |
+  +-------------------------------------------+
+  | Protocol                                  |
+  | (JSON, compact etc)                       |
+  +-------------------------------------------+
+  | Transport                                 |
+  | (raw TCP, HTTP etc)                       |
+  +-------------------------------------------+
+```
+技术栈分为四层，自底向上分别为：传输层(Transport Layer)、协议层(Protocol Layer)、处理层(Processor Layer)和服务层(Server Layer)。([thrift network stack](https://thrift.apache.org/docs/concepts))
+1. 传输层(Transport Layer)：传输层负责直接从网络中读取和写入数据，它定义了具体的网络传输协议；比如说TCP/IP传输等，并进行了抽象，使上层对传输协议解耦。
+2. 协议层(Protocol Layer)：协议层定义了数据传输格式，负责网络传输数据的序列化和反序列化；比如说JSON、XML、二进制数据等。
+3. 处理层(Processor Layer)：处理层是由具体的IDL（接口描述语言）生成的，封装了具体的底层网络传输和序列化方式，并委托给用户实现的Handler进行处理。
+4. 服务层(Server Layer)：整合上述组件，提供具体的网络线程/IO服务模型，形成最终的服务。选用 TThreadSelectorServer采用的就是多线程 reactor 模型的 server。
+
+可以看到thrift可以解决前面提到的问题 1 和 3，但是对于服务间寻址(如用 tcp)还是需要给出 host 和 port，对于错误处理对于微服务来说，也完全不够。
+
+因此，kite 框架是，基于 thrift，封装一个 kite 框架，以实现 2 和 4 的功能。
+为了实现服务注册以及服务发现的功能，Kite之间可以互相通信，通过Kontrol的服务发现机制，一个Kite可以发现其它的Kites。也就是说一个Kite可以在Kontrol注册自己，从而让其它的kites能找到它； Kontrol本身也是一个Kite，它用于对服务进行注册和鉴权，使用 etcd 作为存储。服务熔断，也可以在这里实现
+
+
+## redis
+基础见 [redis笔记](../书籍笔记/Redis设计与实现.md)
+
+分布式及架构，见[redis服务端](./Redis服务端实现%20&%20HA.pdf)
+
+## 消息队列
+
+* nsq [nsq](../书籍笔记/GoNsq.md)
+
+* kafka 暂无
+
+## 缓存方式
+[缓存使用](https://toutiao.io/posts/lmhayx/preview)
+[缓存更新](https://coolshell.cn/articles/17416.html)
+[localcache小计](./LocalCache%20学习小记.pdf)
+
+## docker
+
+
+
+## 实习项目总结
+
+西瓜大学主要是对标B站有对新人up 主的培养，西瓜大学需要相应的对新人培养的项目，这对吸引新人 up 主以及对品牌的塑造有着很好的作用。
+
+### 项目结构
+
+![流程图](./asserts/西瓜大学流程图.png)
+
+项目流程如图，分为两个部分，admin 负责课程配置，讲更改写入 mysql，college 负责跟前端交互，读取相应的配置
+
+### 数据表结构设计
+
+分类表：
+```sql
+1 CREATE TABLE `admin_college_course_category` (
+2 `id` int(10) NOT NULL AUTO_INCREMENT COMMENT '主键，分类Id',
+3 `name` varchar(30) NOT NULL DEFAULT '' COMMENT '分类名称',
+5 `parent_id` int(10) NOT NULL DEFAULT '0' COMMENT '父分类id',
+6 `level` int(10) NOT NULL DEFAULT '0' COMMENT '分类层级',
+9 PRIMARY KEY (`id`)
+10 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='西瓜大学课程分类表';
+```
+
+课程表：
+```sql
+1 CREATE TABLE `admin_college_course` (
+2 `id` int(10) NOT NULL AUTO_INCREMENT COMMENT '课程 id',
+3 `group_id` bigint(20) NOT NULL COMMENT '视频gid',
+4 `first_category_id` int(4) NOT NULL DEFAULT '0' COMMENT '第一分类id',
+5 `first_category_name` varchar(30) NOT NULL DEFAULT '' COMMENT '第一分类名称',
+6 `second_category_id` int(4) NOT NULL DEFAULT '0' COMMENT '第二分类 id',
+7 `second_category_name` varchar(30) NOT NULL DEFAULT '' COMMENT '第二分类名称',
+8 `difficulty_type` int(4) NOT NULL DEFAULT '0' COMMENT '难度0: 1: 2: ',
+9 `title` varchar(200) NOT NULL DEFAULT '' COMMENT '标题',
+11 `rank` int(10) NOT NULL DEFAULT '0' COMMENT '排名',
+12 `status` int(4) NOT NULL DEFAULT '0' COMMENT '状态1: 2: ',
+19 PRIMARY KEY (`id`),
+20 UNIQUE KEY `group_id` (`group_id`)
+21 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT=' ';
+```
+
+### 接口设计
+
+1. 保存分类课程
+
+包括新增，修改，单个、批量，都走这个
+```go
+1 struct SaveCourseReq {
+2 1: required list<Course> Courses; // 
+3
+4 255: optional base.Base Base
+5}
+6
+7 struct SaveCourseResp {
+8 1: required list<Course> SaveFailCourses // Course
+9 255: optional base.BaseResp BaseResp,
+10 }
+11
+12 //
+13 SaveCourseResp SaveCourse(1:SaveCourseReq request)
+```
+
+2. 获取分类课程
+
+```go
+21 struct GetCourseReq {
+22 1: optional string KeyWord // group_id
+23 2: optional i32 FirstCategoryId // Id
+24 3: optional i32 SecondCategoryId // Id
+25 4: optional i32 Offset = 0 //
+26 5: optional i32 Limit = 20 // , 20
+27
+28 255: optional base.Base Base
+29 }
+30
+31 struct Course {
+32 1: required i32 Id // Id
+33 2: required i64 GroupId // GroupId
+34 3: optional string Title //
+35 4: optional string FrontCover //
+36 5: required i32 FirstCategoryId // Id
+37 6: required string FirstCategoryName //
+38 7: required i32 SecondCategoryId // Id
+39 8: required string SecondCategoryName //
+40 9: required i32 DifficultyType //
+41 10: optional string CreateTime //
+42 11: required string StartTime //
+43 12: required i32 Status // 1: 2:
+44 13: required i32 Rank //
+45 14: required string Operator //
+46 15: optional string PublishTime //
+47 16: optional string CreateUser //
+48 17: optional string UpdateTime //
+49 }
+50
+51 struct GetCourseResp {
+52 1: required list<Course> Courses
+53 2: optional bool HasMore = false
+54 3: optional i32 TotalNum
+55
+56 255: optional base.BaseResp BaseResp,
+57 }
+58
+59 //
+60 GetCourseResp GetCourse(1:GetCourseReq request)
+```
+
+由于课程较多，后台接口不可能，也不合适，一次性返回所有数据，而合理的做法和最佳实践是：分页
+分页一般有两种方式：
+* 页数表示法：
+  * cur_page + per_page
+* 偏移量表示法
+  * offset + limit
+
+返回时，需要标志位标记是否还有数据，以及数据的总数
+
+### 数据一致性
+
+由于之前设计时，每个 course 都带了分类的名字，但是又是可能需要对分类名称进行更改，因此需要更新一下回复课程的名字。
+当时我们考虑了两种方案：
+* 两表连接查询
+    这个方案有几个问题，一个是公司不鼓励使用 join，主要是由于join 的优化可能有性能上的问题，且可能会同时锁住多个表
+* 读取两次，在 service 层做处理
+    需要读取两个表，网络 io 次数更多。但由于分类名称实际上很少更改，且短时的不同影响较小，我们采用 localcache 进行缓存。关于缓存的选取，见[缓存选取](https://toutiao.io/posts/lmhayx/preview)
